--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
       <section id="video" class="vertical-scrolling video">
         <video data-autoplay playsinline muted loop>
-          <source src="img/video/video.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
+          <source data-src="img/video/video_small.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
         </video>
         <div class="container">
           <div class="video_slider">
@@ -134,7 +134,7 @@
             <p>Founded in 1947, Spirits Canada aims to inspire the past, present and future generation of distilled spirits lovers, and be a partner in industry growth both in Canada, and around the world. </p>
           </div>
           <div class="about_img">
-            <img src="img/about/about.jpeg" alt="">
+            <img data-src="img/about/about.jpeg" alt="">
             <p>Our aim is to welcome, connect, educate and inform. From promoting relationships that strengthen the "grain to glass" process of premium distilled products, to driving industry success with, and for, our distilled spirits counterparts across the world on moderate and responsible consumption of alcohol, current issues, sustainability, economic impact, policy & data.</p>
           </div>
         </div>
@@ -149,7 +149,7 @@
           </div>
           <div class="moderation_video">
             <video data-autoplay playsinline muted>
-              <source src="img/moderation/video.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
+              <source data-src="img/moderation/video.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
             </video>
           </div>
         </div>
@@ -246,7 +246,7 @@
         <div class="podcast_items">
           <div class="podcast_items_item">
             <div class="podcast_items_item_img">
-              <img draggable="false" src="img/podcast/1.webp" alt="">
+              <img draggable="false" data-src="img/podcast/1.webp" alt="">
             </div>
             <span>March 15, 2022</span>
             <h3>WhiskeyLore 
@@ -256,7 +256,7 @@
           </div>
           <div class="podcast_items_item">
             <div class="podcast_items_item_img">
-              <img draggable="false" src="img/podcast/2.webp" alt="">
+              <img draggable="false" data-src="img/podcast/2.webp" alt="">
             </div>
             <span>March 15, 2022</span>
             <h3>Bourbon pursuit
@@ -266,7 +266,7 @@
           </div>
           <div class="podcast_items_item">
             <div class="podcast_items_item_img">
-              <img draggable="false" src="img/podcast/3.webp" alt="">
+              <img draggable="false" data-src="img/podcast/3.webp" alt="">
             </div>
             <span>March 15, 2022</span>
             <h3>Whiskey Fit Pod
@@ -276,7 +276,7 @@
           </div>
           <div class="podcast_items_item">
             <div class="podcast_items_item_img">
-              <img draggable="false" src="img/podcast/4.webp" alt="">
+              <img draggable="false" data-src="img/podcast/4.webp" alt="">
             </div>
             <span>March 15, 2022</span>
             <h3>Whiskey Fit Pod
@@ -286,7 +286,7 @@
           </div>
           <div class="podcast_items_item">
             <div class="podcast_items_item_img">
-              <img draggable="false" src="img/podcast/5.webp" alt="">
+              <img draggable="false" data-src="img/podcast/5.webp" alt="">
             </div>
             <span>March 15, 2022</span>
             <h3>Whiskey Fit Pod
@@ -296,7 +296,7 @@
           </div>
           <div class="podcast_items_item">
             <div class="podcast_items_item_img">
-              <img draggable="false" src="img/podcast/1.webp" alt="">
+              <img draggable="false" data-src="img/podcast/1.webp" alt="">
             </div>
             <span>March 15, 2022</span>
             <h3>WhiskeyLore 
@@ -306,7 +306,7 @@
           </div>
           <div class="podcast_items_item">
             <div class="podcast_items_item_img">
-              <img draggable="false" src="img/podcast/2.webp" alt="">
+              <img draggable="false" data-src="img/podcast/2.webp" alt="">
             </div>
             <span>March 15, 2022</span>
             <h3>Bourbon pursuit
@@ -316,7 +316,7 @@
           </div>
           <div class="podcast_items_item">
             <div class="podcast_items_item_img">
-              <img draggable="false" src="img/podcast/3.webp" alt="">
+              <img draggable="false" data-src="img/podcast/3.webp" alt="">
             </div>
             <span>March 15, 2022</span>
             <h3>Whiskey Fit Pod
@@ -326,7 +326,7 @@
           </div>
           <div class="podcast_items_item">
             <div class="podcast_items_item_img">
-              <img draggable="false" src="img/podcast/4.webp" alt="">
+              <img draggable="false" data-src="img/podcast/4.webp" alt="">
             </div>
             <span>March 15, 2022</span>
             <h3>Whiskey Fit Pod
@@ -336,7 +336,7 @@
           </div>
           <div class="podcast_items_item">
             <div class="podcast_items_item_img">
-              <img draggable="false" src="img/podcast/5.webp" alt="">
+              <img draggable="false" data-src="img/podcast/5.webp" alt="">
             </div>
             <span>March 15, 2022</span>
             <h3>Whiskey Fit Pod
@@ -416,7 +416,7 @@
           <div class="portal_block">
             <div class="portal_block_video">
               <video data-autoplay playsinline muted loop>
-                <source src="img/portal/video.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
+                <source data-src="img/portal/video.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
               </video>
             </div>
             <div class="portal_block_text">
